--- a/people/index.html
+++ b/people/index.html
@@ -40,7 +40,7 @@ into the {body} of the default.hbs template -->
         
                 <div class="author-card">
                     {% if author[1].picture %}
-                        <img class="author-profile-image" src="{{ site.baseurl }}{{ author[1].picture }}" alt="{{ author[1].name }}" />
+                        <img class="author-profile-image" src="{{ "/" | relative_url }}{{ author[1].picture }}" alt="{{ author[1].name }}" />
                     {% else %}
                         <img class="author-profile-image" src="https://upload.wikimedia.org/wikipedia/commons/2/24/Missing_avatar.svg" alt="{{ author[1].name }}" />
                     {% endif %}
@@ -74,7 +74,7 @@ into the {body} of the default.hbs template -->
     
             <div class="author-card">
                 {% if author[1].picture %}
-                    <img class="author-profile-image" src="{{ site.baseurl }}{{ author[1].picture }}" alt="{{ author[1].name }}" />
+                    <img class="author-profile-image" src="{{ "/" | relative_url }}{{ author[1].picture }}" alt="{{ author[1].name }}" />
                 {% else %}
                     <img class="author-profile-image" src="https://upload.wikimedia.org/wikipedia/commons/2/24/Missing_avatar.svg" alt="{{ author[1].name }}" />
                 {% endif %}
