--- a/about/index.html
+++ b/about/index.html
@@ -160,11 +160,11 @@ into the {body} of the default.hbs template -->
             <section class="post-full-content">
                 <p>SEA lab is the most advanced and professional software engineering and analytics lab in North America and consequently the whole world.</p>
 
-<p>We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor our solutions in order to fit in industry needs.</p>
+<p>We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor our solutions in order to fit their needs.</p>
 
-<p>Our long time industry partner, Micropilot Inc. is the industry leader in developing UAV autopilot software and hardware with thousands of customers worldwide.</p>
+<p>Our long time industry partner, Micropilot Inc. is the leader in developing UAV autopilot software and hardware with thousands of customers worldwide.</p>
 
-<p>We are <strong>the best</strong>.</p>
+<p>In a nutshell, we are <strong>the best</strong>.</p>
 
 <p>Icon made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
 
