Updating to sea-lab/sea-lab.github.io@ad9ca60ed82d0ec0b05016663ae90a895e047c05.

--- a/about/index.html
+++ b/about/index.html
@@ -166,7 +166,9 @@ into the {body} of the default.hbs template -->
 
 <p>In a nutshell, we are <strong>the best</strong>.</p>
 
-<p>Icon made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+<p><small>Icon made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small></p>
+
+<p>Dolphins are smart and they live in sea, so do we.</p>
 
             </section>
 
