Updating to sea-lab/sea-lab.github.io@e746565271c7b5be310924618522c8914510547f.

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
     <meta property="og:site_name" content="SEA Lab" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="About" />
-    <meta property="og:description" content="SEA lab is the most advanced and professional software engineering and analytics lab in North America and consequently the whole world. We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor" />
+    <meta property="og:description" content="We are located at Schulich School of Engineering, University of Calgary and our main research interests are: * Automated Software Engineering * Reliable Machine Learning Our reaserch is made possible through close collaborations with the best academic and industrial partners. Do you feel you are smart enough to be one" />
     <meta property="og:url" content="/about/" />
     <meta property="og:image" content="/assets/images/blog-cover.jpg" />
     <meta property="article:publisher" content="https://www.facebook.com/false" />
@@ -52,7 +52,7 @@
     <meta property="article:modified_time" content="" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="About" />
-    <meta name="twitter:description" content="SEA lab is the most advanced and professional software engineering and analytics lab in North America and consequently the whole world. We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor" />
+    <meta name="twitter:description" content="We are located at Schulich School of Engineering, University of Calgary and our main research interests are: * Automated Software Engineering * Reliable Machine Learning Our reaserch is made possible through close collaborations with the best academic and industrial partners. Do you feel you are smart enough to be one" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:image" content="/assets/images/blog-cover.jpg" />
     <meta name="twitter:label1" content="Written by" />
@@ -82,7 +82,7 @@
         "@type": "WebPage",
         "@id": "/about/"
     },
-    "description": "SEA lab is the most advanced and professional software engineering and analytics lab in North America and consequently the whole world. We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor"
+    "description": "We are located at Schulich School of Engineering, University of Calgary and our main research interests are: * Automated Software Engineering * Reliable Machine Learning Our reaserch is made possible through close collaborations with the best academic and industrial partners. Do you feel you are smart enough to be one"
 }
     </script>
 
@@ -122,7 +122,7 @@ into the {body} of the default.hbs template -->
     <li class="nav-home" role="menuitem"><a href="/">Home</a></li>
     <li class="nav-projects" role="menuitem"><a href="/projects">Projects</a></li>
     <li class="nav-projects" role="menuitem"><a href="/people">People</a></li>
-    <li class="nav-publications" role="menuitem"><a href="/tag/publication/">Publications</a></li>
+    <li class="nav-publications" role="menuitem"><a href="/publications/">Publications</a></li>
     <li class="nav-about" role="menuitem"><a href="/about/">About</a></li>
 </ul>
 
@@ -158,17 +158,26 @@ into the {body} of the default.hbs template -->
             
 
             <section class="post-full-content">
-                <p>SEA lab is the most advanced and professional software engineering and analytics lab in North America and consequently the whole world.</p>
+                <!-- SEA lab is the most advanced and professional software engineering and analytics lab in North America and consequently the whole world. -->
+<!-- 
+We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor our solutions in order to fit their needs. 
 
-<p>We research the cutting edge techniques and tools to automate daunting software engineering tasks in large scale applications. We partnered up with industry leaders, specially in Canada, to tailor our solutions in order to fit their needs.</p>
+Our long time industry partner, Micropilot Inc. is the leader in developing UAV autopilot software and hardware with thousands of customers worldwide. -->
 
-<p>Our long time industry partner, Micropilot Inc. is the leader in developing UAV autopilot software and hardware with thousands of customers worldwide.</p>
+<!-- In a nutshell, we are **the best**. -->
 
-<p>In a nutshell, we are <strong>the best</strong>.</p>
+<p>We are located at Schulich School of Engineering, University of Calgary and our main research interests are:</p>
+
+<ul>
+  <li>Automated Software Engineering</li>
+  <li>Reliable Machine Learning</li>
+</ul>
+
+<p>Our reaserch is made possible through close collaborations with the best academic and industrial partners. Do you feel you are smart enough to be one of us? Let’s give it <a href="mailto:hadi.hemmati@ucalgary.ca">a shot</a>!</p>
 
 <p><small>Icon made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small></p>
 
-<p>Dolphins are smart and they live in sea, so do we.</p>
+<p>* Dolphins are smart and they live in sea, so do we.</p>
 
             </section>
 
