--- a/projects/index.html
+++ b/projects/index.html
@@ -119,7 +119,7 @@ into the {body} of the default.hbs template -->
     <li class="nav-home" role="menuitem"><a href="/">Home</a></li>
     <li class="nav-projects" role="menuitem"><a href="/projects">Projects</a></li>
     <li class="nav-projects" role="menuitem"><a href="/people">People</a></li>
-    <li class="nav-publications" role="menuitem"><a href="/tag/publication/">Publications</a></li>
+    <li class="nav-publications" role="menuitem"><a href="/publications/">Publications</a></li>
     <li class="nav-about" role="menuitem"><a href="/about/">About</a></li>
 </ul>
 
