--- a/ICSE-conference.html
+++ b/ICSE-conference.html
@@ -43,7 +43,7 @@
     <meta property="og:site_name" content="SEA Lab" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="On ICSE 2019" />
-    <meta property="og:description" content="I am happy to announce that we are going to participate in ICSE 2019 in Montréal. Our lab was very productive in 2018 year and we have two papers accepted in the conference (and co-located conferences), one student volunteer, and two students on the mentorship workshop program. We look forward" />
+    <meta property="og:description" content="I am happy to announce that we are going to participate in ICSE 2019 in Montréal. Our lab was very productive in 2018 year and we had two accepted papers in the conference (and co-located conferences), one student volunteer, and two students on the mentorship workshop program. We look forward" />
     <meta property="og:url" content="/ICSE-conference" />
     <meta property="og:image" content="/assets/images/montréal.jpeg" />
     <meta property="article:publisher" content="https://www.facebook.com/false" />
@@ -53,7 +53,7 @@
     <meta property="article:tag" content="Announcements" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="On ICSE 2019" />
-    <meta name="twitter:description" content="I am happy to announce that we are going to participate in ICSE 2019 in Montréal. Our lab was very productive in 2018 year and we have two papers accepted in the conference (and co-located conferences), one student volunteer, and two students on the mentorship workshop program. We look forward" />
+    <meta name="twitter:description" content="I am happy to announce that we are going to participate in ICSE 2019 in Montréal. Our lab was very productive in 2018 year and we had two accepted papers in the conference (and co-located conferences), one student volunteer, and two students on the mentorship workshop program. We look forward" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:image" content="/assets/images/montréal.jpeg" />
     <meta name="twitter:label1" content="Written by" />
@@ -85,7 +85,7 @@
         "@type": "WebPage",
         "@id": "/ICSE-conference"
     },
-    "description": "I am happy to announce that we are going to participate in ICSE 2019 in Montréal. Our lab was very productive in 2018 year and we have two papers accepted in the conference (and co-located conferences), one student volunteer, and two students on the mentorship workshop program. We look forward"
+    "description": "I am happy to announce that we are going to participate in ICSE 2019 in Montréal. Our lab was very productive in 2018 year and we had two accepted papers in the conference (and co-located conferences), one student volunteer, and two students on the mentorship workshop program. We look forward"
 }
     </script>
 
@@ -125,7 +125,7 @@ into the {body} of the default.hbs template -->
     <li class="nav-home" role="menuitem"><a href="/">Home</a></li>
     <li class="nav-projects" role="menuitem"><a href="/projects">Projects</a></li>
     <li class="nav-projects" role="menuitem"><a href="/people">People</a></li>
-    <li class="nav-publications" role="menuitem"><a href="/tag/publication/">Publications</a></li>
+    <li class="nav-publications" role="menuitem"><a href="/publications/">Publications</a></li>
     <li class="nav-about" role="menuitem"><a href="/about/">About</a></li>
 </ul>
 
@@ -178,9 +178,9 @@ into the {body} of the default.hbs template -->
                 <div class="kg-card-markdown">
                     <p>I am happy to announce that we are going to participate in ICSE 2019 in Montréal.</p>
 
-<p>Our lab was very productive in 2018 year and we have two papers accepted in the conference (and co-located conferences), one student volunteer, and two students on the <a href="https://2019.icse-conferences.org/track/icse-2019-Software-Engineering-Mentoring-Workshop">mentorship workshop program</a>.</p>
+<p>Our lab was very productive in 2018 year and we had two accepted papers in the conference (and co-located conferences), one student volunteer, and two students on the <a href="https://2019.icse-conferences.org/track/icse-2019-Software-Engineering-Mentoring-Workshop">mentorship workshop program</a>.</p>
 
-<p>We look forward to meet you and share our knowledge and valuable experience to help make the world a better place together.</p>
+<p>We look forward to see you there!</p>
 
 <p><small>Picture credit: Marc-Olivier Jodoin</small></p>
 
@@ -202,7 +202,7 @@ into the {body} of the default.hbs template -->
                             <section class="author-card-content">
                                 <h4 class="author-card-name"><a href="/author/hadi">Hadi Hemmati</a></h4>
                                 
-                                    <p>Best supervisor ever.</p>
+                                    <p>Faculty member. Tenure associate professor at Schulich School of Engineering, University of Calgary</p>
                                 
                             </section>
                         </section>
