Updating to sea-lab/sea-lab.github.io@96ad22ed578f4fcef6362153e62e6ede9e4976ef.

--- a/people/index.html
+++ b/people/index.html
@@ -981,7 +981,7 @@ $(function() {
                     <a href="/">Latest Posts</a>
                     
                     <a href="https://twitter.com/hemmatihadi" target="_blank" rel="noopener">Twitter</a>
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
+                    <!-- <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a> -->
                 </nav>
             </div>
         </footer>
