--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ into the {body} of the default.hbs template -->
                     <a href="/">Latest Posts</a>
                     
                     <a href="https://twitter.com/hemmatihadi" target="_blank" rel="noopener">Twitter</a>
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
+                    <!-- <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a> -->
                 </nav>
             </div>
         </footer>
