Updating to sea-lab/sea-lab.github.io@505c582d6e792d94fa6a2f0e86a163eb2e983c2f.

--- a/publications/index.html
+++ b/publications/index.html
@@ -159,11 +159,11 @@ into the {body} of the default.hbs template -->
 <h2 id="2019">2019</h2>
 
 <p><a href="https://www.sciencedirect.com/science/article/pii/S0065245817300566">Advances in Techniques for Test Prioritization</a>
-<br />
+<small> at ICSE 2019 - Montréal</small><br />
 <small>Hadi Hemmati</small></p>
 
 <p><a href="https://arxiv.org/abs/1903.11242">An Empirical Study on Practicality of Specification Mining Algorithms on a Real-world Application</a>
-<br />
+<small> at ICPC 2019 - Colocated with ICSE, Montréal</small><br />
 <small>Mohammad Jafar Mashhadi, Hadi Hemmati</small></p>
 
 
