Updating to sea-lab/sea-lab.github.io@3f7f784247989bf3f477067f95c49f98e1e146e2.

--- a/publications/index.html
+++ b/publications/index.html
@@ -158,6 +158,10 @@ into the {body} of the default.hbs template -->
                 
 <h2 id="2019">2019</h2>
 
+<p>Interactive Semi-automated SpecificationMining for Debugging: An Experience Report
+<small> at Elsevier IST</small><br />
+<small>Mohammad Jafar Mashhadi, Taha Rihmann Siddiqui, Hadi Hemmati, Howard Loewen</small></p>
+
 <p><a href="https://www.sciencedirect.com/science/article/pii/S0065245817300566">Advances in Techniques for Test Prioritization</a>
 <small> at ICSE 2019 - Montréal</small><br />
 <small>Hadi Hemmati</small></p>
