Updating to sea-lab/sea-lab.github.io@da6641a902521df62a9d32d8cb56dab4f3a2a046.

--- a/publications/index.html
+++ b/publications/index.html
@@ -158,7 +158,7 @@ into the {body} of the default.hbs template -->
                 
 <h2 id="2019">2019</h2>
 
-<p>Interactive Semi-automated SpecificationMining for Debugging: An Experience Report
+<p><a href="https://arxiv.org/pdf/1905.02245.pdf">Interactive Semi-automated SpecificationMining for Debugging: An Experience Report</a>
 <small> at Elsevier IST</small><br />
 <small>Mohammad Jafar Mashhadi, Taha R Siddiqui, Hadi Hemmati, Howard Loewen</small></p>
 
