--- a/publications/index.html
+++ b/publications/index.html
@@ -163,16 +163,12 @@ into the {body} of the default.hbs template -->
 <small>Mohammad Jafar Mashhadi, Taha R Siddiqui, Hadi Hemmati, Howard Loewen</small></p>
 
 <p><a href="https://www.sciencedirect.com/science/article/pii/S0065245817300566">Advances in Techniques for Test Prioritization</a>
-<small> at ICSE 2019 - Montréal</small><br />
+<small> at ICSE 2019</small><br />
 <small>Hadi Hemmati</small></p>
 
 <p><a href="https://arxiv.org/abs/1903.11242">An Empirical Study on Practicality of Specification Mining Algorithms on a Real-world Application</a>
-<small> at ICPC 2019 - Colocated with ICSE, Montréal</small><br />
+<small> at International Conference on Program Comprehension (ICPC) 2019</small><br />
 <small>Mohammad Jafar Mashhadi, Hadi Hemmati</small></p>
-
-<p>Data Warehouse Testing
-<small> at Elsevier Advances in Computers</small><br />
-<small>Hajar Homayouni, Sudipto Ghosh, Indrakshi Ray</small></p>
 
 <h2 id="2018">2018</h2>
 
@@ -185,7 +181,7 @@ into the {body} of the default.hbs template -->
 <small>Hadi Hemmati, Syed S Arefin, Howard W Loewen</small></p>
 
 <p><a href="papers/2018-HemmatiSharifi-Investigating.pdf">Investigating NLP-Based Approaches for Predicting Manual Test Case Failure</a>
-<small> at ICST 2018</small><br />
+<small> at International Conference on Software Testing (ICST) 2018</small><br />
 <small>Hadi Hemmati, Fatemeh Sharifi</small></p>
 
 <h2 id="2017">2017</h2>
