Updating to sea-lab/sea-lab.github.io@c61cd027cdacf185824e47ed8f2e15513e270dd7.

--- a/publications/index.html
+++ b/publications/index.html
@@ -158,6 +158,11 @@ into the {body} of the default.hbs template -->
                 
 <h2 id="2019">2019</h2>
 
+<p><a href="https://arxiv.org/">Revisiting Hyper-Parameter Tuning for Search-based Test Data Generation</a>
+<small> at SSBSE 2019</small><br />
+<small>Shayan Zamani, Hadi Hemmati</small><br />
+<a href="https://arxiv.org/"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+
 <p><a href="https://arxiv.org/pdf/1905.02245.pdf">Interactive Semi-automated SpecificationMining for Debugging: An Experience Report</a>
 <small> at Elsevier IST</small><br />
 <small>Mohammad Jafar Mashhadi, Taha R Siddiqui, Hadi Hemmati, Howard Loewen</small><br />
