--- a/publications/index.html
+++ b/publications/index.html
@@ -158,6 +158,21 @@ into the {body} of the default.hbs template -->
                 
 <h2 id="2019">2019</h2>
 
+<p><a href="-">GloBug: Using Global Data in Fault Localization</a>
+<small> at TBA</small><br />
+<small>TBA</small><br />
+<a href="-"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+
+<p><a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020shayan.pdf">Class Prioritization for Hyper-parameter Tuning in Search-based Software Testing</a>
+<small> at TBA</small><br />
+<small>TBA</small><br />
+<a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020shayan.pdf"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+
+<p><a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020maryam.pdf">Comparing Coverage &amp; Mutation-based Adequacy Criteria for Testing Deep Neural Networks</a>
+<small> at TBA</small><br />
+<small>TBA</small><br />
+<a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020maryam.pdf"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+
 <p><a href="http://arxiv.org/abs/1906.02349">Revisiting Hyper-Parameter Tuning for Search-based Test Data Generation</a>
 <small> at SSBSE 2019</small><br />
 <small>Shayan Zamani, Hadi Hemmati</small><br />
