Updating to sea-lab/sea-lab.github.io@2d29eaf6430672760ccc3b49ebf4936f760d035f.

--- a/publications/index.html
+++ b/publications/index.html
@@ -156,6 +156,13 @@ into the {body} of the default.hbs template -->
 
             <section class="post-full-content">
                 
+<h2 id="2020">2020</h2>
+
+<p><a href="/papers/2020-Hybrid.pdf">Hybrid Deep Neural Networks to Infer State Models of Black-Box Systems</a>
+<small> at TBA</small><br />
+<small>TBA</small><br />
+<a href="/papers/2020-Hybrid.pdf"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+
 <h2 id="2019">2019</h2>
 
 <p><a href="-">GloBug: Using Global Data in Fault Localization</a>
