--- a/publications/index.html
+++ b/publications/index.html
@@ -159,8 +159,8 @@ into the {body} of the default.hbs template -->
 <h2 id="2020">2020</h2>
 
 <p><a href="/papers/2020-Hybrid.pdf">Hybrid Deep Neural Networks to Infer State Models of Black-Box Systems</a>
-<small> at TBA</small><br />
-<small>TBA</small><br />
+<small> at ASE 2020</small><br />
+<small>Mohammad Jafar Mashhadi, Hadi Hemmati</small><br />
 <a href="/papers/2020-Hybrid.pdf"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
 
 <h2 id="2019">2019</h2>
