Updating to sea-lab/sea-lab.github.io@54c6208a3d0e3705fe9f476f099e9d459ee55107.

--- a/publications/index.html
+++ b/publications/index.html
@@ -170,10 +170,10 @@ into the {body} of the default.hbs template -->
 <small>TBA</small><br />
 <a href="-"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
 
-<p><a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020shayan.pdf">Class Prioritization for Hyper-parameter Tuning in Search-based Software Testing</a>
-<small> at TBA</small><br />
-<small>TBA</small><br />
-<a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020shayan.pdf"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+<p><a href="TBA">A Cost-Effective Approach for Hyper-Parameter Tuning in Search-based Test Case Generation</a>
+<small> at ICSME 2020</small><br />
+<small>Shayan Zamani, Hadi Hemmati</small><br />
+<a href="TBA"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
 
 <p><a href="https://wcm.ucalgary.ca/hemmati/files/hemmati/icst2020maryam.pdf">Comparing Coverage &amp; Mutation-based Adequacy Criteria for Testing Deep Neural Networks</a>
 <small> at TBA</small><br />
