--- a/ICSE-conference.html
+++ b/ICSE-conference.html
@@ -337,7 +337,7 @@ into the {body} of the default.hbs template -->
     <article class="post-card post-template">
         
             <a class="post-card-image-link" href="/ASE-conference">
-                <div class="post-card-image" style="background-image: url(/https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/San_Diego_Reflecting_Pond.jpg/1024px-San_Diego_Reflecting_Pond.jpg)"></div>
+                <div class="post-card-image" style="background-image: url(//upload.wikimedia.org/wikipedia/commons/thumb/c/c3/San_Diego_Reflecting_Pond.jpg/1024px-San_Diego_Reflecting_Pond.jpg)"></div>
             </a>
         
         <div class="post-card-content">
