Updating to sea-lab/sea-lab.github.io@b7db04f1def812e05f32391e9c71b0d023168040.

--- a/ASE.html
+++ b/ASE.html
@@ -232,7 +232,7 @@ classification algorithms by up to 17%.</p>
                             <section class="author-card-content">
                                 <h4 class="author-card-name"><a href="/author/mjafar">Mohammad Jafar Mashhadi</a></h4>
                                 
-                                    <p>Mohammad Jafar (MJ) is doing his MSc on Specification Mining and Software Testing here at SEA lab. His research
+                                    <p>Mohammad Jafar (MJ) has done his MSc on Specification Mining and Software Testing here at SEA lab. His research
 is in collaboration with <a href="https://www.micropilot.com/" rel="nofollow" target="_blank">Micropilot Inc</a>, 
 the world leader manufacturer of UAV autopilot software and hardware.
 He completed his bachelor of Software Engineering at Sharif University of Technology in 2017. 
