--- a/publications/index.html
+++ b/publications/index.html
@@ -159,10 +159,10 @@ into the {body} of the default.hbs template -->
                 
 <h2 id="2020">2020</h2>
 
-<p><a href="/papers/2020-Hybrid.pdf">Hybrid Deep Neural Networks to Infer State Models of Black-Box Systems</a>
+<p><a href="https://arxiv.org/abs/2008.11856">Hybrid Deep Neural Networks to Infer State Models of Black-Box Systems</a>
 <small> at ASE 2020</small><br />
 <small>Mohammad Jafar Mashhadi, Hadi Hemmati</small><br />
-<a href="/papers/2020-Hybrid.pdf"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a></p>
+<a href="https://arxiv.org/abs/2008.11856"><img src="/assets/images/fulltext.svg" alt="Full Text" style="display: inline; width:32px; height:32px;" /></a>  <a href="/papers/ase2020presentation.pdf"><img src="/assets/images/presentation.svg" alt="Slides" style="display: inline; width:32px; height:32px;" /></a></p>
 
 <p><a href="TBA">A Cost-Effective Approach for Hyper-Parameter Tuning in Search-based Test Case Generation</a>
 <small> at ICSME 2020</small><br />
